--- a/components/components.json
+++ b/components/components.json
@@ -1,5 +1,5 @@
 {
-  "tags": [
-    "components"
-  ]
+  "inputPath": "./components/*/*/*.md",
+  "outputPath": "_site/components/*/*/*.html",
+  "url": "/components/"
 }
